[package]
name = "mycontract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["subcontract/testutils", "soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.9.2"
subcontract.path = "../subcontract"

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
